# craps

./: .gitignore  README  new-project.cabal
app/: Main.hs
